[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/pop_mummy_part.png" type="Texture" id=1]
[ext_resource path="res://PopMummyPart.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.570194, 1 )
colors = PoolColorArray( 1, 0.52549, 0.0980392, 1, 1, 0.658824, 0.333333, 1, 1, 0.811765, 0.631373, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 6 )

[node name="PopMummyPart" type="RigidBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -5, -4, 3, -5, 6, -4, 6, 4, 3, 6, -2, 6, -5, 3 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.75
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
damping = 100.0
color_ramp = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
